2003-11-27  Angus Leeming  <angus.leeming@btopenworld.com>

	* NEWS: updated to reflect what has been going on in the 1.1 cycle.

2003-11-26  Angus Leeming  <angus.leeming@btopenworld.com>
 
	* fdesign/fd_main.h: add a 'char * output_dir' var to the FD_Opt struct.

	* fdesign/fd_main.c: add code to initialize FD_Opt::output_dir.

	* fdesign/fd_forms.c (save_forms): pass fdopt.output_dir var to the
	external converter if non-zero.

	* fdesign/fd_printC.c (filename_only, build_fname): new helper functions
	that use FD_Opt::output_dir if it is set.
	(C_output): invoke build_fname rather than building the file name
	itself.

2003-11-27  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/demotest_fd.[ch]:
	* demos/demotest_fd.fd: removed. The routines were not invoked by
	demotest (witness that it still links fine).

	* demos/pmbrowse.c: split out the fdesign generated code.
	Ensuing changes to use the fdesign generated code unchanged.

	* demos/pmbrowse.fd: moved...
	* demos/fd/pmbrowse_gui.[ch]:
	* demos/fd/pmbrowse_gui.fd: to here.

	* demos/Makefile.am:
	* demos/fd/Makefile.am: ensuing changes.

2003-11-27  Angus Leeming  <angus.leeming@btopenworld.com>

	* image/image_gif.c (flush_buffer): do not pass 'incode'. Instead use
	a local variable.

2003-11-26  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* fdesign/fd_forms.c (save_forms): do not try to remove twice ".fd"
	from file name (avoids problem with path names containing a '.').

2003-11-25  Clive A Stubbings <xforms2@vjet.demon.co.uk>

	* image/image_gif.c (flush_buffer): new static function, containing
	code factored out of process_lzw_code.
	(process_lzw_code): invoke flush_buffer where old code was in
	process_lzw_code itself. In addition, also invoke flush_buffer
	when cleaning up after an old-style gif image.

	* image/image_jpeg.c (JPEG_identify): handle 'raw' JPEG images
	without the JFIF header.

2003-11-26  Angus Leeming  <angus.leeming@btopenworld.com>
