@@ -1,5 +1,5 @@
 .\"
-.\" $Id: fdesign.man,v 1.2 2003/09/09 00:28:25 leeming Exp $
+.\" $Id: fdesign.man,v 1.3 2003/11/27 18:15:00 leeming Exp $
 .\"
 .\" Man page for Forms Designer
 .\" Use the following command to generate viewable man page
@@ -65,6 +65,9 @@ This option prevents
 .I fdesign
 from attempting to make a connection to the X server. The file list
 following this flag is converted to C code directly.
+.TP
+.BI \-dir " destdir"
+output any converted files in \fIdestdir\fR.
 .TP
 .BI \-unit " pixel|point|mm|cp|cmm"
 selects the unit of measure for object geometries. For non-pixel unit,
